# poreSTAT

./: .gitignore  Dockerfile  README.md  required_python_packages  setup.py
clib/: AlignmentLibrary.cpp  CMakeLists.txt
clib/align_stats/: AlignmentStatistic.cpp  AlignmentStatistic.h  AlignmentStatisticProcessor.h  AlignmentStatisticsProcessor.cpp  ReadStats.h
clib/cmake/modules/: FindHTSlib.cmake
clib/utils/: FASTAreader.cpp  FASTAreader.h  GenomicRegion.cpp  GenomicRegion.h  GenomicRegionUtils.cpp  GenomicRegionUtils.h  Maths.cpp  Maths.h  ReadRegion.cpp  ReadRegion.h  Sequence.cpp  Sequence.h  SequenceUtils.cpp  SequenceUtils.h  StringUtils.h  Utils.h  UtilsUnary.h  VectorizedMap.cpp  VectorizedMap.h  XAMReadProcessor.cpp  XAMReadProcessor.h  XAMReader.cpp  XAMReader.h  macros.h
doc/: Makefile  conf.py  index.rst  make.bat  plot_types.rst
porestat/: __init__.py
porestat/DEtools/: DifferentialAnalysis.py  calcRobustFCs.py  calculateExpressionValues.py  compareCountsPerBiotype.py  compareCountsPerGene.py  compareDiffReg.py  compareDifferentialAnalysis.py  compareEnrichmentAnalysis.py  compareInterLogFCs.py  compareLogFC.py  compareMappingReplicates.py  compareRankPlots.py  compareReplicates.py  countPlots.py  fetchMiRExploreGenes.py  gene2info.py  gene2lengths.py  getRobustFCs.py  (+12 more)
scripts/: boiGUIParser.py  bowtie.cwl  cbinding_test.py  cbnviewer.py  createBioGUI.py  cyjsOutput.py  cyjs_plot.html  extractDEGenes.py  mirFetchAnalysis.ipynb  mirbase.csv  poreAnalysis.py  poreHelper.py  poreSTAT.py  pybel_test.py  scratchpad.py  testfile.py  unifyGeneFCList.py
(+123 files in other folders)
